--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -64,7 +64,7 @@
 }
 
 
-@Manual{psborrow2,
+@article{psborrow2,
   title = {psborrow2: An R Package for Bayesian Dynamic Borrowing Simulation Study and Analysis},
   author = {Isaac Gravestock, Matthew H Secrest},
   year = {2024},
